--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,800&display=swap');
+
+:root {
+  box-sizing: border-box;
+  --dark-mode-element: hsl(209, 23%, 22%);
+  --dark-mode-background: hsl(207, 26%, 17%);
+  --light-mode-text: hsl(200, 15%, 8%);
+  --light-mode-input: hsl(0, 0%, 52%);
+  --light-mode-background: hsl(0, 0%, 98%);
+  --dark-mode-text: hsl(0, 0%, 100%);
+  --light-mode-element: hsl(0, 0%, 100%);
+  --home-page-items-font-size: 0.875em;
+  --detail-page--items-font-size: 1em;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  font-size: var(--home-page-items-font-size);
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: var(--dark-mode-background);
+  color: var(--dark-mode-text);
+}
+
+/* 375px */
+@media (min-width: 23.4375em) {
+}
+
+/* 1440px */
+@media (min-width: 90em) {
+}
