Add router link to the logo and style it

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <nav class="nav">
   <div class="logo">
-    <a class="logo-name">{{ logoName }}</a>
+    <a class="logo-name" routerLink="/countries">{{ logoName }}</a>
   </div>
   <div class="mode">
     <span class="moon-icon">
