--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -29,11 +29,9 @@
 
       <div class="region-names-container">
         <ul class="region-names" id="region-names">
-          <li>Africa</li>
-          <li>America</li>
-          <li>Asia</li>
-          <li>Europe</li>
-          <li>Oceania</li>
+          <li *ngFor="let region of regions">
+            {{ region }}
+          </li>
         </ul>
       </div>
     </div>
