--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -15,7 +15,8 @@
 
 .search-icon-container,
 .search-input,
-.country-filter {
+.country-filter,
+.countries {
   background-color: var(--dark-mode-element);
 }
 
@@ -89,5 +90,69 @@
 @media (min-width: 48em) {
   .region-names.is-open {
     width: 100%;
+  }
+}
+
+.countries-container {
+  margin-top: 1.5em;
+  display: flex;
+  flex-direction: column;
+}
+
+.countries {
+  margin-bottom: 2em;
+}
+
+.country-flag img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.country-details {
+  flex: 2;
+  padding: 1.5em 0 2em 1em;
+}
+
+.country-name {
+  font-weight: 800;
+}
+
+.country-other-info .population,
+.country-other-info .region,
+.country-other-info .capital {
+  font-weight: 600;
+}
+
+@media (min-width: 48em) {
+  .countries-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 1em;
+  }
+
+  .countries {
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+  .country-flag,
+  .country-details {
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+  .country-flag {
+    flex: 1;
+  }
+
+  .country-flag .flag-image {
+    height: 12.5em;
+    max-width: 100%;
+    object-fit: cover;
+  }
+
+  .country-details {
+    flex: 1;
   }
 }
