Make the regions position to be absolute and update media queries

--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -68,6 +68,10 @@
   cursor: pointer;
 }
 
+.region-names-container {
+  position: relative;
+}
+
 .region-names {
   background-color: var(--dark-mode-element);
   margin-top: 0.5em;
@@ -75,6 +79,7 @@
   list-style-type: none;
   padding: 1em;
   display: none;
+  position: absolute;
 }
 
 .region-names > li {
@@ -99,8 +104,24 @@
   flex-direction: column;
 }
 
+@media (min-width: 48em) {
+  .countries-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 1em;
+  }
+}
+
 .countries {
   margin-bottom: 2em;
+}
+
+@media (min-width: 48em) {
+  .countries {
+    display: flex;
+    flex-flow: column nowrap;
+  }
 }
 
 .country-flag img {
@@ -108,9 +129,33 @@
   max-height: 100%;
 }
 
+@media (min-width: 48em) {
+  .country-flag {
+    flex: 1;
+  }
+
+  .country-flag .flag-image {
+    height: 12.5em;
+    max-width: 100%;
+    object-fit: cover;
+  }
+}
+
 .country-details {
   flex: 2;
   padding: 1.5em 0 2em 1em;
+}
+
+@media (min-width: 48em) {
+  .country-flag,
+  .country-details {
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+  .country-details {
+    flex: 1;
+  }
 }
 
 .country-name {
@@ -121,38 +166,4 @@
 .country-other-info .region,
 .country-other-info .capital {
   font-weight: 600;
-}
-
-@media (min-width: 48em) {
-  .countries-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-    grid-auto-rows: 1fr;
-    gap: 1em;
-  }
-
-  .countries {
-    display: flex;
-    flex-flow: column nowrap;
-  }
-
-  .country-flag,
-  .country-details {
-    display: flex;
-    flex-flow: column nowrap;
-  }
-
-  .country-flag {
-    flex: 1;
-  }
-
-  .country-flag .flag-image {
-    height: 12.5em;
-    max-width: 100%;
-    object-fit: cover;
-  }
-
-  .country-details {
-    flex: 1;
-  }
 }
