Implement the logic to filter by region

--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -30,7 +30,10 @@
 
       <div class="region-names-container">
         <ul class="region-names" id="region-names">
-          <li *ngFor="let region of regions">
+          <li
+            *ngFor="let region of regions"
+            (click)="fetchCountriesByRegion(region)"
+          >
             {{ region }}
           </li>
         </ul>
