--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -2,14 +2,14 @@
   <nav class="nav">
     <div class="country-search">
       <div class="search-country">
-        <div class="search-icon-container">
+        <div class="search-icon-container" id="searchIconContainer">
           <span class="search-icon"><fa-icon icon="search"></fa-icon></span>
         </div>
         <input
           class="search-input"
           type="text"
-          name="search"
-          id="search"
+          name="countrySearch"
+          id="countrySearch"
           placeholder="{{ searchPlaceHolder }}"
           [(ngModel)]="countryListFilter"
         />
@@ -17,7 +17,7 @@
     </div>
 
     <div class="country-filter-container">
-      <div class="country-filter">
+      <div class="country-filter" id="countryFilter">
         <div class="country-filter-label">
           {{ filterByLabel }}
         </div>
