--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,15 @@
-<nav class="nav">
+<nav class="nav" id="navBar">
   <div class="logo">
-    <a class="logo-name" routerLink="/countries">{{ logoName }}</a>
+    <a class="logo-name" routerLink="/countries" id="logoName">
+      {{ logoName }}
+    </a>
   </div>
   <div class="mode">
     <span class="moon-icon">
-      <fa-icon icon="moon"></fa-icon>
+      <fa-icon icon="moon" id="moonIcon"></fa-icon>
     </span>
-    <a class="mode-name">{{ mode }}</a>
+    <a class="mode-name" (click)="changeMode()" id="modeName">
+      {{ isDark ? 'Light Mode' : 'Dark Mode' }}
+    </a>
   </div>
 </nav>
