--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,15 +1,26 @@
-<nav class="nav" id="navBar">
+<nav class="nav" [ngClass]="{ 'light-mode-element': !(isDarkModeOn$ | async) }">
   <div class="logo">
-    <a class="logo-name" routerLink="/countries" id="logoName">
+    <a
+      class="logo-name"
+      routerLink="/countries"
+      [ngClass]="{ 'light-mode-text': !(isDarkModeOn$ | async) }"
+    >
       {{ logoName }}
     </a>
   </div>
   <div class="mode">
     <span class="moon-icon">
-      <fa-icon icon="moon" id="moonIcon"></fa-icon>
+      <fa-icon
+        icon="moon"
+        [ngClass]="{ 'light-mode-text': !(isDarkModeOn$ | async) }"
+      ></fa-icon>
     </span>
-    <a class="mode-name" (click)="changeMode()" id="modeName">
-      {{ isDark ? 'Light Mode' : 'Dark Mode' }}
+    <a
+      class="mode-name"
+      (click)="changeMode()"
+      [ngClass]="{ 'light-mode-text': !(isDarkModeOn$ | async) }"
+    >
+      {{ isDark ? "Light Mode" : "Dark Mode" }}
     </a>
   </div>
 </nav>
