--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<div [ngClass]="{ 'light-mode': !(isDarkModeOn$ | async) }">
+  <app-navigation></app-navigation>
+  <router-outlet></router-outlet>
+</div>
