--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -20,7 +20,7 @@
       (click)="changeMode()"
       [ngClass]="{ 'light-mode-text': !(isDarkModeOn$ | async) }"
     >
-      {{ isDark ? "Light Mode" : "Dark Mode" }}
+      {{ isDark ? "Dark Mode" : "Light Mode" }}
     </a>
   </div>
 </nav>
